@@ -9,6 +9,7 @@
   * Updated D8 library to 0.1.3
   * Fixed a bug with native date picker and M.TextFieldView (update value on lostFocus event)
   * Content binding now can handle 0 as number since we now check for undefined & null
+  * M.LocationManager's getAddressByLocation() now can return the address as an components object instead of fixed string
 
 ** Version 1.0 RC1 - Date 17.01.2011 **
 
